[tool.poetry]
name = "python-lab"
version = "0.1.0"
description = ""
authors = ["Vítor Alves <alves.vitor@bcg.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
httpx = "^0.27.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

